# opensearch-helper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  opensearch_helper.pyi  pyproject.toml  requirements.txt  setup.py
drivers/: opensearch_dev_driver.py  test-keys.yaml
opensearch_helper/: __init__.py
opensearch_helper/bp/: __init__.py  __init__.pyi  opensearch_api.py  opensearch_api.pyi  opensearch_aws.py  opensearch_dev.py
opensearch_helper/dmo/: __init__.py  aws_client_httpauth.py  aws_client_serverless.py  confidence_compute.py  query_dsl_generator.py
opensearch_helper/dto/: __init__.py  __init__.pyi  aws_client_type.py  search_score_type.py  search_score_type.pyi  typedefs.py
opensearch_helper/svc/: __init__.py  query_opensearch.py  score_top_hit.py  score_top_hit.pyi
resources/scripts/: copy.ps1  copy_setup.ps1
stubs/opensearch_helper/: __init__.pyi
stubs/opensearch_helper/bp/: __init__.pyi  opensearch_api.pyi  opensearch_aws.pyi  opensearch_dev.pyi
stubs/opensearch_helper/dto/: __init__.pyi  typedefs.pyi
stubs/opensearch_helper/svc/: __init__.pyi  query_opensearch.pyi  score_top_hit.pyi
tests/: confidence_compute_test.py  multi_phrase_prefix_1_test.py  multi_phrase_prefix_2_test.py  multimatch_generator_test.py  progressive_bigram_query_1_test.py  progressive_bigram_query_2_test.py  test_find_score_type.py  test_search_score_type.py
