[tool.poetry]
authors = [
  "Craig Trim <craigtrim@gmail.com>",
]

maintainers = [
  "Craig Trim <craigtrim@gmail.com>",
]

description = "OpenSearch Helper for Easy I/O"
license = "None"
name = "opensearch-helper"
readme = "README.md"

version = "0.1.24"

keywords = ["nlp", "nlu", "opensearch", "elasticsearch", "aws", "search"]
repository = "https://github.com/craigtrim/opensearch-helper"

classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/craigtrim/opensearch-helper/issues"

[tool.poetry.dependencies]
baseblock = "*"
boto3 = "*"
opensearch-py = "^1.1.0"
python = "^3.8.5"
requests = "*"
requests_aws4auth = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
flakeheaven = "*"
plac = "*"
pre-commit = "^2.20.0"
pytest = "*"

[tool.poetry.build]
generate-setup-file = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.flakeheaven]
base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"
exclude = ["__init__.py", "README.md", "setup.py", ".venv", ".git", "*.pyc", "*.pyi"]
format = "grouped"
max_line_length = 500
show_source = true

[tool.flakeheaven.plugins]
"flake8-*" = ["+*"]
flake8-bandit = ["-*", "+S1??"]
flake8-docstrings = ["-*"]
pyflakes = ["+*", "-F401", "-F403"]
